removed underline on icon, tweaked editor positionning, fixed z-index issues

--- a/views/scss/qti/_tooltip.scss
+++ b/views/scss/qti/_tooltip.scss
@@ -13,5 +13,6 @@
         vertical-align: super;
         margin-left: 2px;
         text-decoration: none;
+        display: inline-block;
     }
 }
