--- a/views/scss/qtiCreator/_tooltip.scss
+++ b/views/scss/qtiCreator/_tooltip.scss
@@ -8,8 +8,6 @@ $tooltipBorder: #f1d031;
     max-width: 350px;
 
     .tooltip-editor-target-container {
-        display: flex;
-        justify-content: center;
         margin-bottom: 5px;
 
         .tooltip-editor-target {
@@ -19,7 +17,6 @@ $tooltipBorder: #f1d031;
             padding: 3px 5px;
             background-color: #fff;
             margin-bottom: 2px;
-            display: inline-block;
         }
     }
 
