--- a/views/scss/qtiCreator/_widget-popup.scss
+++ b/views/scss/qtiCreator/_widget-popup.scss
@@ -5,7 +5,7 @@ $bodyBg: rgba($uiClickableDefaultBg, .9);;
 
 .window-component.widget-popup {
     border: 0;
-    z-index: 999;
+    z-index: 99;
     background-color: $bodyBg;
 
     .window-component-title-bar {
